# fastapi-starter

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.test.yaml  docker-compose.yaml  entrypoint.sh  lint.sh  pyproject.toml
.github/workflows/: ci.yaml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: health_check.py  item.py
app/core/: config.py
app/crud/: __init__.py  base.py  item.py
app/db/: alembic.ini  session.py
app/db/alembic/: env.py
app/db/alembic/versions/: 64a6e14e31f0_added_items_table.py
app/models/: base.py  item.py
app/schemas/: item.py
app/services/: exceptions.py  utils.py
app/tests/: conftest.py  test_health_check.py  test_item.py
