[tool.poetry]
name = "app"
version = "0.1.0"
description = "FastAPI, SQLModel, Alembic, asyncpg starter project."
authors = ["molu <mmol@tutanota.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.86.0"
sqlmodel = "^0.0.8"
sqlalchemy = "1.4.41"
asyncpg = "^0.27.0"
alembic = "^1.8.1"
uvicorn = "^0.19.0"
gunicorn = "^20.1.0"
httpx = "^0.23.0"
tzdata = "^2022.6"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pytest = "^7.2.0"

[tool.black]
line-length = 88
target-version = ["py310"]
include = "\\.pyi?$"
force-exclude = """
    /(
        alembic
        | \\.venv
        )/
"""

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip = [".gitignore", ".venv", "alembic"]
skip_glob = ["src/blib2to3", "tests/data", "profiling"]
known_first_party = ["black", "blib2to3", "blackd", "_black_version"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
